<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Manifest -->
    <string name="app_name">ParkingIDI</string>

    <!-- Menu -->
    <string name="menu_drain">Buida el Parking</string>
    <string name="menu_historicDrain">Buida tot l\'historic</string>
    <string name="menu_undo">Desfer</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_price">Canvia el preu </string>
    <string name="menu_plots">Canvia el nombre de places </string>
    <string name="menu_export_hist">Exporta recaptament a Csv</string>
    <string name="menu_export_resum">Exporta resum a Csv</string>

    <!--Titles -->
    <string name="help_title">Help</string>
    <string name="title_error">Error</string>
    <string name="edcTitle">Dades nou cotxe </string>
    <string name="escTitle">Dades de sortida del cotxe </string>
    <string name="priceTitle">Canvi de preu </string>
    <string name="plots_title">Canvi de nombre de places </string>

    <!-- Help -->
    <string name="help_button">Tanca</string>

    <!--About -->
    <string name="text_about">Aplicació desenvolupada per: \n \n
                Cristina Fontanet Albinyana \n \n
                estudiant d\'enginyeria informàtica de la FIB \n
                en l\'assignatura d\'Introducció al Disseny d\'Interfícies</string>

    <!-- Dialog New Car -->
    <string name="introdueix_matricula">Introdueix una matricula si us plau</string>
    <string name="matriculaJaDins">Ja hi ha un cotxe amb aquesta matricula ara mateix</string>

    <!--  Exit Car-->
    <string name="edmMatr">Matricula: </string>
    <string name="edmDia">Entrada</string>
    <string name="edmDiaS">Sortida</string>
    <string name="edmCalculPreu1"> Euros/min</string>
    <string name="edmTemps">Temps: </string>
    <string name="edmPreu">Preu total: </string>
    <string name="edmDies">dies i </string>
    <string name="edmMoneda">€</string>

    <!--  ParkingActivity -->
    <string name="busyParking">El parking està ple, no pot entrar cap més cotxe.</string>
    <string name="snackAssigna">Plaça assignada:</string>
    <string name="toastOrderChanges">Ordre de visualització canviat</string>

    <!-- TabPagerAdapter -->
    <string name="tabParking">Estat places</string>
    <string name="tabHisto">Recaptació</string>

    <!--  HistoricFragment -->
    <string name="historicRecaud">Recaudament: </string>
    <string name="historicRecaudDay">Recaudament diari </string>
    <string name="historicRecaudBet">Recaudament entre </string>
    <string name="historicRecaudMensual">Recaudament mes </string>

    <!-- DialogHistory -->
    <string name="historicDialog">Mostrar historial</string>
    <string name="hdRecaptDiaria">Recaptació diària</string>
    <string name="hdRecaptTotal">Recaptació total</string>
    <string name="hdRecaptMens">Recaptació mensual</string>
    <string name="hdRecaptDates">Recaptació entre dues dates</string>
    <string name="hdMostra">Mostra</string>
    <string name="hdTriaHoraIn">Hora inici</string>
    <string name="hdTriaDataIn">Data inici</string>
    <string name="hdTriaHoraFi">Hora final</string>
    <string name="hdTriaDataF">Data final</string>
    <string name="hderrorNoDIni">Tria una data d\'inici</string>
    <string name="hderrorNoHIni">Tria una hora d\'inici</string>
    <string name="hderrorNoDFi">Tria una data de fi</string>
    <string name="hderrorNoHFi">Tria una hora de fi</string>
    <string name="hderrorIniciPosteriorFi">Les dades d\'inici han de ser anteriors a les de fi</string>
    <string name="hderrorDesconegut">Hi ha hagut un error amb les dates</string>

    <!--  Undo -->
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="noPreviousAction">Encara no s\'ha fet cap moviment</string>
    <string name="undoEntry">Segur que vols desfer l\'entrada del cotxe </string>
    <string name="undoExit">Segur que vols desfer la sortida del cotxe </string>

    <!--  Everywhere -->
    <string name="ok">Ok</string>
    <string name="Cancel">Cancela</string>
    <string name="Accept">Accepta</string>

    <string name="resetHistory">Historial buidat</string>
    <string name="alertResetHistorial">Segur que vols buidar l\'historial?\nRecorda que questa acció no es podrà desfer i que eliminarà totes les dades d\'aquest.\nPots fer\-ne una còpia exportant\-lo en format csv </string>
    <string name="resetParkingStatus">Places buidades</string>
    <string name="alertResetStatus">Segur que vols buidar les places del parking? Recorda que questa acció no es podrà desfer </string>
    <string name="priceText">Preu per minut: </string>
    <string name="freePeach">Lliure</string>


    <string name="exportOk">S\'ha creat un arxiu a la carpeta de Downloads. Vols obrir-lo?</string>
    <string name="exportNo">Hi ha hagut algun problema a l\'hora de crear el fitxer. El teu dispositiu fa servir algun format concret?</string>
    <string name="exportNoWrite">No hi ha permisos per escriure a la memoria del dispositiu. Tens carpeta de Downloads?</string>

    <string name="plotsText">Nombre de places:</string>
    <string name="changeNumPlotsAdvise">Atenció! Si el nombre de places es redueix i hi havia algun cotxe en les últimes places, aquests seran eliminats sense fer cap registre de sortida \nAtenció! si canvies el nombre de places, no podràs desfer l\'últim moviment realitzat</string>
    <string name="plotsMin">El nombre de plots ha de ser més gran a 0</string>
</resources>
