<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.cristinafontanet.parkingidi.DialogPriceChanger"
    style="@style/DialogsTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/plots_title"
            style="@style/TitlesTheme"
            android:id="@+id/textTitlePlot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeNumPlotsAdvise"
            android:id="@+id/textView5" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plotsText"
                android:id="@+id/plotText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/plotNumberText"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/button8"
                android:layout_weight="5" />

            <Button
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Accept"
                android:id="@+id/button9"
                android:layout_weight="5" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
