<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristinafontanet.parkingidi.DialogPriceChanger"
    style="@style/DialogsTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/priceTitle"
            style="@style/TitlesTheme"
            android:id="@+id/textView4" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceText"
                android:id="@+id/priceText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText2"
                android:numeric="decimal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/button3"
                android:layout_weight="5" />

            <Button
                style="@style/ButtonTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Accept"
                android:id="@+id/button4"
                android:layout_weight="5" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
