<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogExitCar">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/escTitle"
            android:id="@+id/exitTitle"
            style="@style/TitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/edmMatr"
                android:id="@+id/textView6"
                android:layout_weight="10"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edmMatr"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:id="@+id/matricula"
                android:layout_weight="10"
                android:gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="10"
            android:text="@string/edmCalculPreu1"
            android:gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edmDia"
                android:id="@+id/textView7"
                android:layout_weight="10"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edmDiaS"
                android:id="@+id/textView16"
                android:layout_weight="10"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItem" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/dia"
                android:textAppearance="?android:attr/textAppearanceInverse"
                android:text="diaX"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="diaX"
                android:id="@+id/dia2"
                android:textAppearance="?android:attr/textAppearanceInverse"
                android:layout_weight="10"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="horaX"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:id="@+id/horaE"
                android:layout_weight="10"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="horaX"
                android:id="@+id/horaS"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:layout_weight="10"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edmTemps"
                android:id="@+id/textView12"
                android:layout_weight="10"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="minuts"
                android:id="@+id/minutsPassats"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="10"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edmPreu"
                android:id="@+id/textView13"
                android:layout_weight="10"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="preeeu"
                android:id="@+id/calculPreu"
                android:layout_weight="10"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/bcancela"
                android:layout_weight="10" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Paga"
                android:id="@+id/bPaga"
                android:layout_weight="10" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
